--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,14 @@
+html {
+  font-size: 62.5%;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #eee;
 }
 
 a {
@@ -12,5 +17,25 @@ a {
 }
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+p,
+a {
+  font-size: 1.6rem;
+  color: #616161;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+.container {
+  margin-top: 8rem;
 }
