--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+
 html {
   font-size: 62.5%;
 }
@@ -6,8 +8,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: #eee;
 }
 
@@ -24,16 +27,19 @@ a {
 
 p,
 a {
+  font-weight: 400;
   font-size: 1.6rem;
   color: #616161;
 }
 
 h1 {
   font-size: 4rem;
+  font-weight: 900;
 }
 
 h2 {
   font-size: 2.4rem;
+  font-weight: 400;
 }
 
 .container {
